video and gallery view on mobile fix

--- a/themes/twinnims/static/css/style.css
+++ b/themes/twinnims/static/css/style.css
@@ -121,6 +121,16 @@ figcaption p {
   margin: 0;
 }
 
+video {
+  width: 100% !important;
+  height: auto !important;
+}
+
+.video-wrapper {
+  position: relative;
+  padding: 8px 40px;
+}
+
 /* structural elements */
 
 .wrapper {
